--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -7,6 +7,7 @@
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^4.8.0",
     "bcrypt": "^5.1.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3"
   }
 }
