--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -8,6 +8,8 @@
     "@openzeppelin/contracts": "^4.8.0",
     "bcrypt": "^5.1.0",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "minimist": "^1.2.5",
+    "web3.storage": "^3.1.0"
   }
 }
