--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^4.8.0",
+    "aes-js": "^3.1.2",
     "bcrypt": "^5.1.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "js-sha256": "^0.9.0",
     "minimist": "^1.2.5",
     "web3.storage": "^3.1.0"
   }
