--- a/med-records/package.json
+++ b/med-records/package.json
@@ -9,7 +9,9 @@
     "bcrypt": "^5.1.0",
     "browserify": "^17.0.0",
     "browserify-aes": "^1.2.0",
+    "js-sha256": "^0.9.0",
     "core-js": "^3.26.0",
+    "aes-js": "^3.1.2",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "3.3.0",
     "cryptr": "^6.0.3",
