--- a/med-records/package.json
+++ b/med-records/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aes-js": "^3.1.2",
     "bcrypt": "^5.1.0",
     "browserify": "^17.0.0",
     "browserify-aes": "^1.2.0",
-    "js-sha256": "^0.9.0",
     "core-js": "^3.26.0",
-    "aes-js": "^3.1.2",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "3.3.0",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "js-sha256": "^0.9.0",
     "minimist": "^1.2.5",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
